<resources>
    <string name="app_name">TestNauka</string>
    <string name="change_calendar">Редактирование Календаря</string>
    <string name="change_employees">Редактирование Сотрудников</string>
    <string name="change_department">Редактирование Департаментов</string>
    <string name="employees">Сотрудники:</string>
    <string name="employee">Сотрудник:</string>
    <string name="idNumber">Номер паспорта:</string>
    <string name="location">Местоположение:</string>
    <string name="department">Отдел:</string>
    <string name="name">Имя:</string>
    <string name="departmentId">Отдел номер:</string>
    <string name="header">Выберите, что вы хотите сделать</string>
</resources>
